# QTradeX-Algo-Trading-SDK

./: .gitignore  AGENTS.md  Our_Clone.md  QTRADEX_ADAPTER_IDEAS.md  QUICKSTART.md  README.md  pyproject.toml  qtradex_channel_adapter.py  qtradex_combinatronix_adapter.py  qtradex_combinatronix_router.py  qtradex_combinatronix_tuner.py  qtradex_mythic_adapter.py  screenshots.md
.github/workflows/: publish.yml
demos/: demo_skew_landscape.py  extinction_event.py  extinction_event_v2.py  run_v1_baseline.py
qtradex/common/: utilities.py
qtradex/core/: __init__.py  backtest.py  dispatch.py  monte_carlo.py
qtradex/indicators/: qi.pyx  utilities.pyx
qtradex/optimizers/: lsga.py  utilities.py
qtradex/plot/: utilities.py
qtradex/private/: bitshares_exchange.py  execution.py  signals.py
qtradex/public/: data.py  file_loader.py  klines_ccxt.py
reference/: trading_system.py
reference/Combinatronix_AI_Cursor/: LICENSE  README.md  THEORY.md  requirements.txt  setup.py
reference/Combinatronix_AI_Cursor/atoms/: README.md  __init__.py
reference/Combinatronix_AI_Cursor/core/: __init__.py  combinator_vm.py  field_engine.py  kernel_algebra.py  serialization.py
reference/Combinatronix_AI_Cursor/docs/: index.md  philosophy.md
reference/Combinatronix_AI_Cursor/examples/: atom_demos.py  molecule_demos.py  organism_demos.py  quickstart.py
reference/Combinatronix_AI_Cursor/molecules/: MOLECULAR_SYSTEM_SUMMARY.md  Molecules_Build_Plan.md  README.md  __init__.py
reference/Combinatronix_AI_Cursor/organisms/: Organism_Build_Plan.md  README.md  __init__.py
(+153 files in other folders)
