[build-system]
requires = ["setuptools>=64", "wheel", "Cython>=3", "numpy<2"]
build-backend = "setuptools.build_meta"

[project]
version = "0.0.0"
name = "QTradeX"
description = "AI-powered SDK featuring algorithmic trading, backtesting, deployment on 100+ exchanges, and multiple optimization engines."
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "WTFPL"}
requires-python = ">=3.9"
authors = [{name = "squidKid-deluxe"}]  # Optional; adjust as needed
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "ccxt",
    "jsonpickle",
    "cachetools",
    "yfinance",
    "tulipy",
    "finance-datareader",
    "numpy<2",
    "matplotlib",
    "scipy",
    "ttkbootstrap",
]

[project.optional-dependencies]
full = ["qtradex[bitshares]"]
bitshares = ["bitshares-signing"]

[project.urls]
Homepage = "https://github.com/squidKid-deluxe/QTradeX-Algo-Trading-SDK"
Issues = "https://github.com/squidKid-deluxe/QTradeX-Algo-Trading-SDK/issues"

[project.scripts]
qtradex-tune-manager = "qtradex.core.tune_manager:main"

[tool.setuptools]
packages = {find = {where = ["."]}}
include-package-data = true
ext-modules = [
    {name = "qtradex.indicators.utilities", sources = ["qtradex/indicators/utilities.pyx"]},
    {name = "qtradex.indicators.qi", sources = ["qtradex/indicators/qi.pyx"]},
]
